GPII-4221: Add ncurses for colored output

--- a/dockerfiles/google/Dockerfile
+++ b/dockerfiles/google/Dockerfile
@@ -41,7 +41,8 @@ RUN apk --no-cache add \
         jq \
         gnupg \
         ruby \
-        ruby-json
+        ruby-json \
+        ncurses
 
 COPY gemfiles/google /gemfiles/google/
 ENV BUNDLE_GEMFILE /gemfiles/google/Gemfile
